# MINI404

./: .gitignore  .gitmodules  Mini404Exec.html  README.md  _config.yml  configurator.html  configure  index.html  index.md  index_old.md  meson.build  style.css  test.md  updateDocs.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml  config_tool  question-discussion.md
.github/workflows/: build.yml  dll-list.txt  lint.yml  tests.yml
_includes/: checkbox.html  dropdown.html  enabler.html  input.html  md-collapse.html  mini-features.md  mk4-features.md  printer.html  printers.md  spinbox.html  textinput.html  xl-features.md
crypto/: meson.build  sha1-internal.c  sha1_i.h  sha256-internal.c  sha256_i.h  sha384-internal.c  sha384_i.h  sha512-internal.c  sha512_i.h
default-configs/devices/: arm-softmmu.mak  buddy-softmmu.mak
hw/arm/: Kconfig  buddyboard.c  meson.build  st25dv64k.h  st7789v.c  stm32_clktree.c  stm32_rcc.c  stm32_util.h  stm32f2xx_crc.c  stm32f2xx_dma.c  stm32f2xx_dma.h  stm32f2xx_flashint.c  stm32f2xx_i2c.c  stm32f2xx_i2c.h  stm32f2xx_pwr.c  stm32f2xx_rcc.h  stm32f2xx_rtc.h  stm32f2xx_tim.c  stm32f2xx_tim.h  stm32f407_soc.c  stm32f407_soc.h  stm32f4xx_itm.c  tmc2209_usart.c  tmc2209_usart.h
hw/arm/prusa/: Kconfig  buddyboard.c  launch-xl.sh  meson.build  otp.h  prusa-mini.c  prusa-mk4.c  prusa-xl-bed.c  prusa-xl-esp32.c  prusa-xl-extruder.c  prusa-xl.c
hw/arm/prusa/assets/: copyhelper.py  meson.build
hw/arm/prusa/assets/mini/: mini_bed.mtl  mini_efan.mtl  mini_extruder.mtl  mini_extruder_lite.mtl  mini_hotend.mtl  mini_knob.mtl  mini_pfan.mtl  mini_sheet.mtl  mini_x.mtl  mini_y.mtl  mini_z.mtl
hw/arm/prusa/opengl/: Color.cpp  Color.h  Config.h  GLDashboardMgr.cpp  GLDashboardMgr.h  GLObj.cpp  GLObj.h  GLPrint.cpp  IKeyClient.cpp  IKeyClient.h  IPCIndicator.cpp  KeyController.cpp  KeyController.h  MK3SGL.cpp  MK3SGL.h  MK3S_Lite.cpp  MK3S_Lite.h  Mini_Full.cpp  Mini_Full.h  Mini_Lite.cpp  Mini_Lite.h  OBJCollection.h  PLYExport.cpp  Scriptable.h  meson.build
hw/arm/prusa/parts/: 2d-dashboard.c  74CBTLV3257.c  74HC4052.c  ACS711.c  AT21CSxx.c  CS30BL.c  FUSB302B.c  PCA9557.c  buddy_input.c  buddy_visuals.c  corexy_helper.c  current_sum.c  dashboard_types.h  dwarf_buttons.c  encoder_input.c  fan.c  gl_dashboard.c  gt911.c  hall_sensor.c  heater.c  hx717.c  irsensor.c  loadcell.c  meson.build  mini_visuals.c  mmu_bridge.c  mmu_bridge.h  modular_bed_visuals.c  overcurrent_latch.c  p404_key_input.c  pinda.c  powersource.c  software_pwm.c  software_spi.c  spi_display.c  spi_rgb.c  spi_rgb.h  st25dv64k.c  st7789v.c  thermistor.c  (+7 more)
hw/arm/prusa/stm32_chips/: stm32f030xx.h  stm32f407xx.h  stm32f427xx.h  stm32f4xx_irqs.h  stm32g070xx.h
hw/arm/prusa/stm32_common/: meson.build  stm32_adc.c  stm32_adc_regdata.h  stm32_adcc.c  stm32_adcc.h  stm32_chip_macros.h  stm32_clk.h  stm32_common.c  stm32_common.h  stm32_crc.c  stm32_crc_regdata.h  stm32_dbg.c  stm32_dma.c  stm32_dma_regdata.h  stm32_f2xx_f4xx_dma.c  stm32_f2xx_f4xx_dma.h  stm32_f2xx_f4xx_dma_regdata.h  stm32_gpio.c  stm32_gpio.h  stm32_gpio_regdata.h  stm32_iwdg.c  stm32_iwdg_regdata.h  stm32_otp.c  stm32_rcc.c  stm32_rcc.h  stm32_rcc_if.h  stm32_rcc_regdefs.h  stm32_shared.h  stm32_spi.c  stm32_syscfg.c  stm32_syscfg_regdata.h  stm32_types.h  stm32_usart.c  stm32_usart_regdata.h
hw/arm/prusa/stm32_tests/: meson.build  mini404_dwarf_input_test.c  mini404_encoder_test.c  mini404_fan_test.c  mini404_hallsensor_test.c  mini404_hx717_test.c  mini404_irsensor_test.c  mini404_mmu_bridge_test.c  mini404_pinda_test.c  mini404_sn74cbt_test.c  mini404_sn74hc4052_test.c  mini404_ws281x_test.c  stm32_adc-test.c  stm32_crc-test.c  stm32_dbg-test.c  stm32_dma-test.c  stm32_exti-test.c  stm32_f4_dma-test.c  stm32_flashint-test.c  stm32_gpio-test.c  stm32_iwdg-test.c  stm32_otp-test.c  stm32_rcc-test.c  stm32_rng-test.c  stm32_syscfg-test.c  stm32_uart-test.c  stm32f4xx_flashint-test.c
hw/arm/prusa/stm32f030/: meson.build  stm32f030_soc.c  stm32f03x_rcc.c
hw/arm/prusa/stm32f407/: meson.build  stm32.h  stm32_clk_type.h  stm32_clktree.c  stm32_clktree.h  stm32_rcc.c  stm32_rcc.h  stm32_uart.c  stm32_uart.h  stm32_util.h  stm32f2xx_crc.c  stm32f2xx_crc.h  stm32f2xx_dma.c  stm32f2xx_dma.h  stm32f2xx_flashint.c  stm32f2xx_flashint.h  stm32f2xx_gpio.c  stm32f2xx_gpio.h  stm32f2xx_i2c.c  stm32f2xx_i2c.h  stm32f2xx_pwr.c  stm32f2xx_pwr.h  stm32f2xx_rcc.c  stm32f2xx_rcc.h  stm32f2xx_rtc.c  stm32f2xx_rtc.h  stm32f2xx_tim.c  stm32f2xx_tim.h  stm32f407_soc.c  stm32f407_soc.h  stm32f4xx_adc.c  stm32f4xx_adc.h  stm32f4xx_adcc.c  stm32f4xx_adcc.h  stm32f4xx_dwt.c  stm32f4xx_eth.c  stm32f4xx_flashint.c  stm32f4xx_flashint.h  stm32f4xx_flashint_regdata.h  stm32f4xx_itm.c  (+17 more)
hw/arm/prusa/stm32g070/: meson.build  stm32g070_dmamux.c  stm32g070_exti.c  stm32g070_exti_regdata.h  stm32g070_flashint.c  stm32g070_flashint_regdata.h  stm32g070_rcc.c  stm32g070_soc.c
hw/arm/prusa/utility/: ArgHelper.cpp  ArgHelper.h  GLDashboardMgr.cpp  GLDashboardMgr.h  GLMotor.cpp  GLMotor.h  IKeyClient.h  IPCIndicator.h  IScriptable.cpp  IScriptable.h  KeyController.cpp  KeyController.h  ScriptHost.cpp  ScriptHost.h  ScriptHost_C.h  Scriptable.cpp  Scriptable.h  macros.h  p404_keyclient.c  p404_keyclient.h  p404_motor_if.c  p404_motor_if.h  p404_script_console.c  p404scriptable.c  p404scriptable.h  text_helper.c  text_helper.h  usbip.h  usbip_server.c  usbip_server.h
hw/block/: m25p80.c
hw/char/: esp32_uart.c  meson.build
hw/gpio/: meson.build
hw/i2c/: esp32_i2c.c  meson.build
hw/intc/: armv7m_nvic.c
hw/misc/: esp32_aes.c  esp32_dport.c  esp32_flash_enc.c  esp32_ledc.c  esp32_rsa.c  esp32_sha.c  meson.build  ssi_psram.c  stm32f4xx_exti.c
hw/net/: opencores_eth.c
hw/nvram/: eeprom_at24c.c  esp32_efuse.c  meson.build
hw/sd/: Kconfig  dwc_sdmmc.c  meson.build
hw/ssi/: esp32_spi.c  meson.build
hw/timer/: esp32_frc_timer.c  esp32_timg.c  meson.build  trace-events
hw/usb/: bus.c  (+1 more)
hw/xtensa/: Kconfig  esp32.c  esp32_intc.c  esp8266.c  meson.build
pc-bios/: meson.build
qapi/: machine.json
softmmu/: qtest.c
(+24 files in other folders)
