copy = find_program('copyhelper.py')

run_command(copy, join_paths('mini','mini_bed.mtl'), join_paths('assets', 'mini_bed.mtl'))
run_command(copy, join_paths('mini','Mini_Bed.obj'), join_paths('assets', 'Mini_Bed.obj'))
run_command(copy, join_paths('mini','mini_efan.mtl'), join_paths('assets', 'mini_efan.mtl'))
run_command(copy, join_paths('mini','Mini_EFan.obj'), join_paths('assets', 'Mini_EFan.obj'))
run_command(copy, join_paths('mini','mini_extruder.mtl'), join_paths('assets', 'mini_extruder.mtl'))
run_command(copy, join_paths('mini','Mini_Extruder.obj'), join_paths('assets', 'Mini_Extruder.obj'))
run_command(copy, join_paths('mini','mini_extruder_lite.mtl'), join_paths('assets', 'mini_extruder_lite.mtl'))
run_command(copy, join_paths('mini','Mini_Extruder_Lite.obj'), join_paths('assets', 'Mini_Extruder_Lite.obj'))
run_command(copy, join_paths('mini','mini_hotend.mtl'), join_paths('assets', 'mini_hotend.mtl'))
run_command(copy, join_paths('mini','Mini_Hotend.obj'), join_paths('assets', 'Mini_Hotend.obj'))
run_command(copy, join_paths('mini','mini_pfan.mtl'), join_paths('assets', 'mini_pfan.mtl'))
run_command(copy, join_paths('mini','Mini_PFan.obj'), join_paths('assets', 'Mini_PFan.obj'))
run_command(copy, join_paths('mini','mini_sheet.mtl'), join_paths('assets', 'mini_sheet.mtl'))
run_command(copy, join_paths('mini','Mini_Sheet.obj'), join_paths('assets', 'Mini_Sheet.obj'))
run_command(copy, join_paths('mini','mini_x.mtl'), join_paths('assets', 'mini_x.mtl'))
run_command(copy, join_paths('mini','Mini_X.obj'), join_paths('assets', 'Mini_X.obj'))
run_command(copy, join_paths('mini','mini_y.mtl'), join_paths('assets', 'mini_y.mtl'))
run_command(copy, join_paths('mini','Mini_Y.obj'), join_paths('assets', 'Mini_Y.obj'))
run_command(copy, join_paths('mini','mini_z.mtl'), join_paths('assets', 'mini_z.mtl'))
run_command(copy, join_paths('mini','Mini_Z.obj'), join_paths('assets', 'Mini_Z.obj'))
run_command(copy, join_paths('mini','mini_knob.mtl'), join_paths('assets', 'mini_knob.mtl'))
run_command(copy, join_paths('mini','Mini_Knob.obj'), join_paths('assets', 'Mini_Knob.obj'))
run_command(copy, join_paths('mini','Triangles.mtl'), join_paths('assets', 'Triangles.mtl'))
run_command(copy, join_paths('mini','Triangles.obj'), join_paths('assets', 'Triangles.obj'))
