arm_ss.add(when: 'CONFIG_BUDDYBOARD', if_true: files(
        'ACS711.c',
        '74CBTLV3257.c',
        '74HC4052.c',
        'AT21CSxx.c',
        'CS30BL.c',
        'corexy_helper.c',
        'current_sum.c',
        'dwarf_buttons.c',
        'encoder_input.c',
        'fan.c',
        'FUSB302B.c',
        'gl_dashboard.c',
        'gt911.c',
        '2d-dashboard.c',
        'heater.c',
        'hx717.c',
        'hall_sensor.c',
        'irsensor.c',
        'loadcell.c',
        'modular_bed_visuals.c',
        'overcurrent_latch.c',
        'p404_key_input.c',
        'PCA9557.c',
        'pinda.c',
        'powersource.c',
        'software_pwm.c',
        'software_spi.c',
        'spi_display.c',
        'spi_rgb.c',
        'thermistor.c',
        'tmc2130.c',
        'tmc2209.c',
        'ws281x.c',
        'xl_bridge.c',
    ))
