qtests_buddy = [
    'stm32_adc-test',
    'stm32_dbg-test',
    'stm32_crc-test',
    'stm32_dma-test',
    'stm32_f4_dma-test',
    'stm32_exti-test',
    'stm32_flashint-test',
    'stm32f4xx_flashint-test',
    'stm32_gpio-test',
    'stm32_iwdg-test',
    'stm32_otp-test',
    'stm32_rcc-test',
    'stm32_rng-test',
    'stm32_syscfg-test',
    'stm32_uart-test'
]
