qtests_buddy = [
    'prusa/stm32_tests/mini404_irsensor_test',
    'prusa/stm32_tests/mini404_hx717_test',
    'prusa/stm32_tests/mini404_hallsensor_test',
    'prusa/stm32_tests/mini404_mmu_bridge_test',
    'prusa/stm32_tests/mini404_pinda_test',
    'prusa/stm32_tests/stm32_adc-test',
    'prusa/stm32_tests/stm32_dbg-test',
    'prusa/stm32_tests/stm32_crc-test',
    'prusa/stm32_tests/stm32_dma-test',
    'prusa/stm32_tests/stm32_f4_dma-test',
    'prusa/stm32_tests/stm32_exti-test',
    'prusa/stm32_tests/stm32_flashint-test',
    'prusa/stm32_tests/stm32f4xx_flashint-test',
    'prusa/stm32_tests/stm32_gpio-test',
    'prusa/stm32_tests/stm32_iwdg-test',
    'prusa/stm32_tests/stm32_otp-test',
    'prusa/stm32_tests/stm32_rcc-test',
    'prusa/stm32_tests/stm32_rng-test',
    'prusa/stm32_tests/stm32_syscfg-test',
    'prusa/stm32_tests/stm32_uart-test'
]
