arm_ss.add(when: 'CONFIG_STM32F407_SOC',
 if_true: files(
    'stm32f4xx_soc.c',
    'stm32_uart.c',
    'stm32_clktree.c',
    'stm32f4xx_dwt.c',
    'stm32f4xx_eth.c',
    'stm32f2xx_i2c.c',
    'stm32f4xx_itm.c',
    'stm32f2xx_tim.c',
    'stm32f2xx_rcc.c',
    'stm32f2xx_rtc.c',
    'stm32f4xx_flashint.c',
    'stm32f2xx_pwr.c',
    'stm32f4xx_rng.c',
    'stm32f4xx_adc.c',
    'stm32f4xx_adcc.c',
    'stm32f4xx_usb.c'
))
